--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -21,7 +21,7 @@
   background-color: #f5eded;
   color: white;
   padding: 0.8rem 1.5rem;
-  border: none;
+  border-color: #1F2937;
   border-radius: 17px;
   font-weight: bold;
   text-decoration: none;
